--- a/Final Project Data (1).ipynb
+++ b/Final Project Data (1).ipynb
@@ -2804,6 +2804,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "id": "fedb5668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_4 (Conv2D)           (None, 126, 126, 32)      320       \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 63, 63, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 61, 61, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten_2 (Flatten)         (None, 57600)             0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 16)                921616    \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 16)                0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 6)                 102       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 940,534\n",
+      "Trainable params: 940,534\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adamax\n",
+    "model_cnn_adamax = keras.models.Sequential()\n",
+    "model_cnn_adamax.add(keras.layers.Conv2D(32, (3,3), padding = 'valid', input_shape=(128,128,1), activation = 'relu'))\n",
+    "model_cnn_adamax.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adamax.add(keras.layers.Conv2D(64, (3,3), padding = 'valid', activation = 'relu'))\n",
+    "model_cnn_adamax.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adamax.add(keras.layers.Flatten())\n",
+    "model_cnn_adamax.add(keras.layers.Dense(16))\n",
+    "model_cnn_adamax.add(keras.layers.Dropout(0.5))\n",
+    "model_cnn_adamax.add(keras.layers.Dense(6))\n",
+    "\n",
+    "model_cnn_adamax.compile(loss='sparse_categorical_crossentropy', metrics=['accuracy'], optimizer=\"Adam\")\n",
+    "model_cnn_adamax.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "707dc95d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(72096, 128, 128, 1)\n",
+      "(72096, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(yds_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "a527fb93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "141/141 [==============================] - 340s 2s/step - loss: 0.8698 - accuracy: 0.9287 - val_loss: 1.0761 - val_accuracy: 0.9375\n",
+      "Epoch 2/3\n",
+      "141/141 [==============================] - 358s 3s/step - loss: 0.5398 - accuracy: 0.9483 - val_loss: 1.0743 - val_accuracy: 0.9375\n",
+      "Epoch 3/3\n",
+      "141/141 [==============================] - 342s 2s/step - loss: 0.6207 - accuracy: 0.9500 - val_loss: 1.0507 - val_accuracy: 0.9375\n"
+     ]
+    }
+   ],
+   "source": [
+    "history_cnn_adamax = model_cnn_adamax.fit(X_train, yds_train, batch_size=512, epochs=3, verbose=1, validation_data=(X_valid, yds_valid)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "baae747a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.from_dict(history_cnn_adamax.history).to_csv('history_cnn_adamax.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "a734fd6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423/423 [==============================] - 18s 43ms/step - loss: 0.7265 - accuracy: 0.9576\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7264618873596191, 0.9576183557510376]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_cnn_adamax.evaluate(X_test, yds_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f6fdb1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "8bc32cd6",
    "metadata": {},
