--- a/Final Project Data (1).ipynb
+++ b/Final Project Data (1).ipynb
@@ -2854,7 +2854,7 @@
     "model_cnn_adamax.add(keras.layers.Dropout(0.5))\n",
     "model_cnn_adamax.add(keras.layers.Dense(6))\n",
     "\n",
-    "model_cnn_adamax.compile(loss='sparse_categorical_crossentropy', metrics=['accuracy'], optimizer=\"AdaMax\")\n",
+    "model_cnn_adamax.compile(loss='sparse_categorical_crossentropy', metrics=['accuracy'], optimizer=\"Adamax\")\n",
     "model_cnn_adamax.summary()"
    ]
   },
@@ -2943,6 +2943,159 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f6fdb1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7775213a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_2 (Conv2D)           (None, 126, 126, 32)      320       \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 63, 63, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 61, 61, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 57600)             0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 16)                921616    \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 16)                0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 6)                 102       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 940,534\n",
+      "Trainable params: 940,534\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Adadelta\n",
+    "model_cnn_adadelta = keras.models.Sequential()\n",
+    "model_cnn_adadelta.add(keras.layers.Conv2D(32, (3,3), padding = 'valid', input_shape=(128,128,1), activation = 'relu'))\n",
+    "model_cnn_adadelta.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adadelta.add(keras.layers.Conv2D(64, (3,3), padding = 'valid', activation = 'relu'))\n",
+    "model_cnn_adadelta.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adadelta.add(keras.layers.Flatten())\n",
+    "model_cnn_adadelta.add(keras.layers.Dense(16))\n",
+    "model_cnn_adadelta.add(keras.layers.Dropout(0.5))\n",
+    "model_cnn_adadelta.add(keras.layers.Dense(6))\n",
+    "\n",
+    "model_cnn_adadelta.compile(loss='sparse_categorical_crossentropy', metrics=['accuracy'], optimizer=\"Adadelta\")\n",
+    "model_cnn_adadelta.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f8f792d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(72096, 128, 128, 1)\n",
+      "(72096, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(yds_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a7d2a893",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "141/141 [==============================] - 346s 2s/step - loss: 0.6215 - accuracy: 0.9404 - val_loss: 1.0801 - val_accuracy: 0.9375\n",
+      "Epoch 2/3\n",
+      "141/141 [==============================] - 357s 3s/step - loss: 0.5541 - accuracy: 0.9489 - val_loss: 1.0712 - val_accuracy: 0.9375\n",
+      "Epoch 3/3\n",
+      "141/141 [==============================] - 344s 2s/step - loss: 0.5554 - accuracy: 0.9483 - val_loss: 1.0668 - val_accuracy: 0.9375\n"
+     ]
+    }
+   ],
+   "source": [
+    "history_cnn_adadelta = model_cnn_adadelta.fit(X_train, yds_train, batch_size=512, epochs=3, verbose=1, validation_data=(X_valid, yds_valid)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "11ad2543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.from_dict(history_cnn_adadelta.history).to_csv('history_cnn_adadelta.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b153ef0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423/423 [==============================] - 18s 43ms/step - loss: 0.7936 - accuracy: 0.9385\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7935603260993958, 0.9385355114936829]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_cnn_adadelta.evaluate(X_test, yds_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430b6583",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c972314",
    "metadata": {},
    "outputs": [],
    "source": []
