--- a/Final Project Data (1).ipynb
+++ b/Final Project Data (1).ipynb
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7775213a",
+   "id": "412cfa42",
    "metadata": {},
    "outputs": [
     {
@@ -3006,7 +3006,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f8f792d7",
+   "id": "c278f837",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a7d2a893",
+   "id": "39683e04",
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3049,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "11ad2543",
+   "id": "0589075e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3059,7 +3059,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b153ef0c",
+   "id": "e52b8a9d",
    "metadata": {},
    "outputs": [
     {
@@ -3087,15 +3087,152 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430b6583",
+   "id": "a92c63bc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "609e7016",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_4 (Conv2D)           (None, 126, 126, 32)      320       \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 63, 63, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 61, 61, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten_2 (Flatten)         (None, 57600)             0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 16)                921616    \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 16)                0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 6)                 102       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 940,534\n",
+      "Trainable params: 940,534\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Adagrad\n",
+    "model_cnn_adagrad = keras.models.Sequential()\n",
+    "model_cnn_adagrad.add(keras.layers.Conv2D(32, (3,3), padding = 'valid', input_shape=(128,128,1), activation = 'relu'))\n",
+    "model_cnn_adagrad.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adagrad.add(keras.layers.Conv2D(64, (3,3), padding = 'valid', activation = 'relu'))\n",
+    "model_cnn_adagrad.add(keras.layers.MaxPooling2D((2,2)))\n",
+    "model_cnn_adagrad.add(keras.layers.Flatten())\n",
+    "model_cnn_adagrad.add(keras.layers.Dense(16))\n",
+    "model_cnn_adagrad.add(keras.layers.Dropout(0.5))\n",
+    "model_cnn_adagrad.add(keras.layers.Dense(6))\n",
+    "\n",
+    "model_cnn_adagrad.compile(loss='sparse_categorical_crossentropy', metrics=['accuracy'], optimizer=\"Adagrad\")\n",
+    "model_cnn_adagrad.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "286155a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(72096, 128, 128, 1)\n",
+      "(72096, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(yds_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bcbfd00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "141/141 [==============================] - 343s 2s/step - loss: 0.5688 - accuracy: 0.9394 - val_loss: 0.3019 - val_accuracy: 0.9375\n",
+      "Epoch 2/3\n",
+      "141/141 [==============================] - 355s 3s/step - loss: 0.5379 - accuracy: 0.9481 - val_loss: 0.1184 - val_accuracy: 0.9375\n",
+      "Epoch 3/3\n",
+      "141/141 [==============================] - 345s 2s/step - loss: 0.4436 - accuracy: 0.9469 - val_loss: 0.1121 - val_accuracy: 0.9375\n"
+     ]
+    }
+   ],
+   "source": [
+    "history_cnn_adagrad = model_cnn_adagrad.fit(X_train, yds_train, batch_size=512, epochs=3, verbose=1, validation_data=(X_valid, yds_valid)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "bd0e66a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.from_dict(history_cnn_adagrad.history).to_csv('history_cnn_adagrad.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "13f4abb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423/423 [==============================] - 18s 43ms/step - loss: 0.1121 - accuracy: 0.9375\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.1120600700378418, 0.9375]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_cnn_adagrad.evaluate(X_test, yds_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c972314",
+   "id": "1d06bd73",
    "metadata": {},
    "outputs": [],
    "source": []
